--- a/code/experiments/config_004.yaml
+++ b/code/experiments/config_004.yaml
@@ -16,7 +16,7 @@ dataset:
 model:
   type: 'gupnet'
   backbone: 'dla34'
-  neck: 'DLAUp'
+  neck: 'DLAUpv2'
 
 optimizer:
   type: 'adam'
@@ -34,7 +34,7 @@ trainer:
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "eval_metrics_R40_008nd"
+  output_dir: "Lite_FPN_eval_metrics_R40_004nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
