--- a/code/experiments/config_002.yaml
+++ b/code/experiments/config_002.yaml
@@ -15,8 +15,8 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'resnet18'
-  neck: 'resnet18'
+  backbone: 'dla34'
+  neck: 'DLAUpv2'
 
 optimizer:
   type: 'adam'
@@ -34,7 +34,7 @@ trainer:
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "Lite-FPN_8_16_eval_metrics_R40_ResNet18_3x3_002nd"
+  output_dir: "Lite-FPN_8_16_bbox_4_8_16_kernel_fusion_eval_metrics_DLA-34_3x3_trainval_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
