--- a/code/experiments/config.yaml
+++ b/code/experiments/config.yaml
@@ -3,7 +3,7 @@ random_seed: 444
 dataset:
   type: 'kitti'
   root_dir: '/root/GUPNet/datasets'
-  batch_size: 16
+  batch_size: 8
   class_merging: False
   use_dontcare: False
   use_3d_center: True
@@ -15,13 +15,13 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'ResNet18'
+  backbone: 'Swin_T'
   neck: 'DeconvUp'
 
 optimizer:
   type: 'adam'
-  lr: 0.00125
-  weight_decay: 0.00001
+  lr: 0.0001
+  weight_decay: 0.05
 
 lr_scheduler:
   warmup: True  # 5 epoches, cosine warmup, init_lir=0.00001 in default
@@ -34,7 +34,7 @@ trainer:
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "eval_metrics_R40_ResNet18_DeconvUp_001nd"
+  output_dir: "eval_metrics_R40_Swin_T_DeconvUp_8_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
