--- a/code/experiments/config_003.yaml
+++ b/code/experiments/config_003.yaml
@@ -15,7 +15,7 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'ResNet18'
+  backbone: 'RegNetX_1_6GF'
   neck: 'DeconvUp'
 
 optimizer:
@@ -30,11 +30,11 @@ lr_scheduler:
 
 trainer:
   max_epoch: 200
-  eval_frequency: 5 # evaluation interval (in epoch)
+  eval_frequency: 1000 # evaluation interval (in epoch)
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "eval_metrics_R40_ResNet18_DeconvUp_224_001nd"
+  output_dir: "outputs/eval_metrics_R40_RegNetX_1_6GF_DeconvUp_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
