--- a/code/experiments/config_004.yaml
+++ b/code/experiments/config_004.yaml
@@ -16,7 +16,7 @@ dataset:
 model:
   type: 'gupnet'
   backbone: 'dla34'
-  neck: 'DLAUpv2'
+  neck: 'DLAUp'
 
 optimizer:
   type: 'adam'
@@ -30,11 +30,11 @@ lr_scheduler:
 
 trainer:
   max_epoch: 200
-  eval_frequency: 5 # evaluation interval (in epoch)
+  eval_frequency: 1000 # evaluation interval (in epoch)
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "Lite_FPN_eval_metrics_R40_004nd"
+  output_dir: "outputs/eval_metrics_R40_DLA34_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
