--- a/code/experiments/config_003.yaml
+++ b/code/experiments/config_003.yaml
@@ -3,7 +3,7 @@ random_seed: 444
 dataset:
   type: 'kitti'
   root_dir: '/root/GUPNet/datasets'
-  batch_size: 16
+  batch_size: 8
   class_merging: False
   use_dontcare: False
   use_3d_center: True
@@ -15,13 +15,13 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'RegNetX_1_6GF'
+  backbone: 'Swin_B'
   neck: 'DeconvUp'
 
 optimizer:
-  type: 'adam'
-  lr: 0.00125
-  weight_decay: 0.00001
+  type: 'adamw'
+  lr: 0.0001
+  weight_decay: 0.05
 
 lr_scheduler:
   warmup: True  # 5 epoches, cosine warmup, init_lir=0.00001 in default
@@ -29,14 +29,13 @@ lr_scheduler:
   decay_list: [90, 120]
 
 trainer:
-  max_epoch: 200
+  max_epoch: 300
   eval_frequency: 1000 # evaluation interval (in epoch)
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "outputs/eval_metrics_R40_RegNetX_1_6GF_DeconvUp_001nd"
+  output_dir: "outputs/eval_metrics_R40_Swin_B_DeconvUp_SimMIM_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
   #resume_model: '...'  
-  
