--- a/code/experiments/config_002.yaml
+++ b/code/experiments/config_002.yaml
@@ -15,7 +15,7 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'ResNet18'
+  backbone: 'RegNetX_1_6GF'
   neck: 'DeconvUp'
 
 optimizer:
@@ -34,7 +34,7 @@ trainer:
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "outputs/eval_metrics_R40_ResNet18_DeconvUp_001nd"
+  output_dir: "outputs/eval_metrics_R40_RegNetX_1_6GF_DeconvUp_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
