--- a/code/experiments/config_003.yaml
+++ b/code/experiments/config_003.yaml
@@ -15,7 +15,7 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'Swin_B'
+  backbone: 'RegNetX_3_2GF'
   neck: 'DeconvUp'
 
 optimizer:
@@ -29,13 +29,14 @@ lr_scheduler:
   decay_list: [90, 120]
 
 trainer:
-  max_epoch: 300
-  eval_frequency: 1000 # evaluation interval (in epoch)
+  max_epoch: 200
+  eval_frequency: 10 # evaluation interval (in epoch)
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "outputs/eval_metrics_R40_Swin_B_DeconvUp_SimMIM_001nd"
+  output_dir: "outputs/eval_metrics_R40_RegNetX_3_2GF_DeconvUp_003nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
   #resume_model: '...'  
+  
