--- a/code/experiments/config_002.yaml
+++ b/code/experiments/config_002.yaml
@@ -2,7 +2,7 @@ random_seed: 444
 
 dataset:
   type: 'kitti'
-  root_dir: '/root/GUPNet/datasets'
+  root_dir: '../datasets'
   batch_size: 16
   class_merging: False
   use_dontcare: False
@@ -15,13 +15,13 @@ dataset:
 
 model:
   type: 'gupnet'
-  backbone: 'RegNetX_1_6GF'
+  backbone: 'Swin_B'
   neck: 'DeconvUp'
 
 optimizer:
-  type: 'adam'
-  lr: 0.00125
-  weight_decay: 0.00001
+  type: 'adamw'
+  lr: 0.0001
+  weight_decay: 0.05
 
 lr_scheduler:
   warmup: True  # 5 epoches, cosine warmup, init_lir=0.00001 in default
@@ -34,7 +34,7 @@ trainer:
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "outputs/eval_metrics_R40_RegNetX_1_6GF_DeconvUp_001nd"
+  output_dir: "outputs/eval_metrics_R40_Swin_B_DeconvUp_CL_Detach_002nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
