--- a/code/experiments/config_003.yaml
+++ b/code/experiments/config_003.yaml
@@ -2,7 +2,7 @@ random_seed: 444
 
 dataset:
   type: 'kitti'
-  root_dir: '/root/GUPNet/datasets'
+  root_dir: '../datasets'
   batch_size: 8
   class_merging: False
   use_dontcare: False
