--- a/code/experiments/config.yaml
+++ b/code/experiments/config.yaml
@@ -2,7 +2,20 @@ random_seed: 444
 
 dataset:
   type: 'kitti'
-  root_dir: '/root/GUPNet/datasets'
+  root_dir: '/root/GUPNet-Lite-FPN/datasets'
+  batch_size: 4
+  class_merging: False
+  use_dontcare: False
+  use_3d_center: True
+  writelist: ['Car','Pedestrian','Cyclist']
+  random_flip: 0.5
+  random_crop: 0.5
+  scale: 0.4
+  shift: 0.1
+
+dataset_nus:
+  type: 'nuscenes-mmdet3d'
+  root_dir: '/root/GUPNet-Lite-FPN/datasets'
   batch_size: 16
   class_merging: False
   use_dontcare: False
@@ -30,11 +43,11 @@ lr_scheduler:
 
 trainer:
   max_epoch: 200
-  eval_frequency: 5 # evaluation interval (in epoch)
+  eval_frequency: 200 # evaluation interval (in epoch)
   save_frequency: 10 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
-  output_dir: "eval_metrics_R40_005nd"
+  output_dir: "eval_metrics_nuscenes_mono3d_001nd"
   #resume_model: '...'  
 tester:
   threshold: 0.2  # confidence filter
