--- a/code/experiments/config.yaml
+++ b/code/experiments/config.yaml
@@ -3,15 +3,15 @@ random_seed: 444
 dataset:
   type: 'kitti'
   root_dir: '/root/GUPNet-Lite-FPN/datasets'
-  batch_size: 18
+  batch_size: 24
   class_merging: False
   use_dontcare: False
   use_3d_center: True
-  # writelist: ['Car','Pedestrian','Cyclist', 'Truck', 'Bus', 'Construction_Vehicle', 'Motorcycle', 'Traffic_Cone', 'Barrier', 'Trailer']
-  writelist: ['Car','Pedestrian','Cyclist']
-  max_objs: 50
-  random_flip: 0.5
-  random_crop: 0.5
+  writelist: ['Car','Pedestrian','Cyclist', 'Truck', 'Bus', 'Construction_Vehicle', 'Motorcycle', 'Traffic_Cone', 'Barrier', 'Trailer']
+  # writelist: ['Car','Pedestrian','Cyclist']
+  max_objs: 100
+  random_flip: 0.0
+  random_crop: 0.0
   scale: 0.4
   shift: 0.1
 
@@ -27,13 +27,14 @@ optimizer:
 
 lr_scheduler:
   warmup: True  # 5 epoches, cosine warmup, init_lir=0.00001 in default
+  init_lir: 0.00001
   decay_rate: 0.1
   decay_list: [90, 120]
 
 trainer:
-  max_epoch: 100
+  max_epoch: 140
   eval_frequency: 200 # evaluation interval (in epoch)
-  save_frequency: 10 # checkpoint save interval (in epoch)
+  save_frequency: 5 # checkpoint save interval (in epoch)
   disp_frequency: 5 # display interval (in batch)
   log_dir: 'log'
   output_dir: "outputs/gupnet_nuscenes_baseline_001nd"
